{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 70,
  "lineage": "ccb814ee-9a8d-e90a-9801-a1dff36aad20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f079e27161c4a359",
            "arn": "arn:aws:ec2:eu-west-3:039497794217:elastic-ip/eipalloc-0f079e27161c4a359",
            "association_id": "eipassoc-022cc9ea134378ee3",
            "domain": "vpc",
            "id": "eipalloc-0f079e27161c4a359",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0a80d8d9210e553b7",
            "private_dns": "ip-10-0-1-207.eu-west-3.compute.internal",
            "private_ip": "10.0.1.207",
            "public_dns": "ec2-15-224-64-90.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.224.64.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "formation_i_dns-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-nat-eip",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:internet-gateway/igw-096907bd17c42c283",
            "id": "igw-096907bd17c42c283",
            "owner_id": "039497794217",
            "tags": {
              "Name": "formation_i_dns-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-igw",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f079e27161c4a359",
            "association_id": "eipassoc-022cc9ea134378ee3",
            "connectivity_type": "public",
            "id": "nat-0d1c3028552dc9405",
            "network_interface_id": "eni-0a80d8d9210e553b7",
            "private_ip": "10.0.1.207",
            "public_ip": "15.224.64.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fb3a9ba7b6dbb9a3",
            "tags": {
              "Name": "formation_i_dns-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-nat",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:route-table/rtb-004b8a672d53b3b00",
            "id": "rtb-004b8a672d53b3b00",
            "owner_id": "039497794217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d1c3028552dc9405",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "formation_i_dns-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-private-rt",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:route-table/rtb-0afacb2545ddc85f8",
            "id": "rtb-0afacb2545ddc85f8",
            "owner_id": "039497794217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096907bd17c42c283",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "formation_i_dns-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-private-rt",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd38d730ba35f21f",
            "route_table_id": "rtb-004b8a672d53b3b00",
            "subnet_id": "subnet-0d865d83197de22bc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086cf7e5dfe75909a",
            "route_table_id": "rtb-004b8a672d53b3b00",
            "subnet_id": "subnet-044cf8d5bcb4471db"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081dafab55d2fec7e",
            "route_table_id": "rtb-0afacb2545ddc85f8",
            "subnet_id": "subnet-0fb3a9ba7b6dbb9a3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059acb33e4fd2897e",
            "route_table_id": "rtb-0afacb2545ddc85f8",
            "subnet_id": "subnet-0fd65c67dc5048242"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group/sg-0ff7f3d4197e4007d",
            "description": "SSH bastion",
            "egress": [],
            "id": "sg-0ff7f3d4197e4007d",
            "ingress": [],
            "name": "formation_i_dns-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "039497794217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "formation_i_dns-dev-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-bastion-sg",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-0d865d83197de22bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d865d83197de22bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "formation_i_dns-dev-public-eu-west-3a",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-public-eu-west-3a",
              "Owner": "etudiant06",
              "Project": "formation-terraform",
              "Tier": "private"
            },
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-044cf8d5bcb4471db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044cf8d5bcb4471db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "formation_i_dns-dev-public-eu-west-3b",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-public-eu-west-3b",
              "Owner": "etudiant06",
              "Project": "formation-terraform",
              "Tier": "private"
            },
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-0fb3a9ba7b6dbb9a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb3a9ba7b6dbb9a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "formation_i_dns-dev-public-eu-west-3a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-public-eu-west-3a",
              "Owner": "etudiant06",
              "Project": "formation-terraform",
              "Tier": "public"
            },
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:subnet/subnet-0fd65c67dc5048242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd65c67dc5048242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039497794217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "formation_i_dns-dev-public-eu-west-3b",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-public-eu-west-3b",
              "Owner": "etudiant06",
              "Project": "formation-terraform",
              "Tier": "public"
            },
            "vpc_id": "vpc-05bdfefd7ff264a69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:vpc/vpc-05bdfefd7ff264a69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f653517882c6982e",
            "default_route_table_id": "rtb-06c43d206c44f451b",
            "default_security_group_id": "sg-0c89af63fcff4e58f",
            "dhcp_options_id": "dopt-01f1c51c68cc28274",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bdfefd7ff264a69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c43d206c44f451b",
            "owner_id": "039497794217",
            "tags": {
              "Name": "formation_i_dns-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Name": "formation_i_dns-dev-vpc",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-0c22ce1541a2ad94b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Egress all",
            "from_port": -1,
            "id": "sgr-0c22ce1541a2ad94b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff7f3d4197e4007d",
            "security_group_rule_id": "sgr-0c22ce1541a2ad94b",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039497794217:security-group-rule/sgr-0bfadf5cbc3e3ba48",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH depuis IP autorisee",
            "from_port": 22,
            "id": "sgr-0bfadf5cbc3e3ba48",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff7f3d4197e4007d",
            "security_group_rule_id": "sgr-0bfadf5cbc3e3ba48",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "tp02-vpc",
              "Owner": "etudiant06",
              "Project": "formation-terraform"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}